additional alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -179,17 +179,27 @@ section {
   justify-content: center;
 }
 
+.intro_max_width_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
 .intro_container {
   display: flex;
   position: relative;
   font-family: var(--primary-ff);
   justify-content: flex-start;
   align-items: center;
+  max-width: var(--max-width);
   z-index: 2;
   width: 100%;
   height: 100%;
   color: white;
   opacity: 1;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
 
 .moon_container {
@@ -211,7 +221,6 @@ section {
   width: 100%;
   display: flex;
   justify-content: flex-start;
-  margin-left: 19vw;
   z-index: 2;
 }
 
